--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
     <title>Document</title>
   </head>
   <body>
-    <h1>Created my html file</h1>
+    <img
+      src="./assets/StockCake-Cyberpunk Cityscape View_1718113100.jpg"
+      alt="image that displays cyberpank world"
+      height="800"
+      width="800"
+    />
   </body>
 </html>
