feat: add image to the left

--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="CSS/reset.css" />
     <title>Document</title>
   </head>
   <body>
     <img
       src="./assets/StockCake-Cyberpunk Cityscape View_1718113100.jpg"
       alt="image that displays cyberpank world"
-      height="800"
-      width="800"
     />
   </body>
 </html>
