--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="background-logo"></div>
     <img
       src="./assets/StockCake-Cyberpunk Cityscape View_1718113100.jpg"
       alt="image that displays cyberpank world"
