feat: add aside

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="background-logo"></div>
-    <img
-      src="./assets/StockCake-Cyberpunk Cityscape View_1718113100.jpg"
-      alt="image that displays cyberpank world"
-    />
+    <div class="aside">
+      <div class="bg-logo">
+        <img class="logo" src="./assets/odin-lined.png" alt="odin logo" />
+        <h1 class="text">Odin</h1>
+      </div>
+    </div>
   </body>
 </html>
